Updated French translations by Maximilian Schleiss <maxschleiss@bluewin.ch>.
(Old svn revision: 22128)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,7 @@
 2006-06-16  Daichi Kawahata <daichi@xfce.org>
 
+	* fr.po: Updated French translations by Maximilian Schleiss
+	  <maxschleiss@bluewin.ch>.
 	* libexo-0.3.pot, *.po: Updated.
 
 2006-06-10  Daichi Kawahata <daichi@xfce.org>
