2006-06-19	Benedikt Meurer <benny@xfce.org>
	* exo-helper/helpers/exo-compose-mail-0.3: For some reasons, not all
	  env implementations can handle additional parameters properly.
	  Bug #1923.




(Old svn revision: 22154)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-06-19	Benedikt Meurer <benny@xfce.org>
+
+	* exo-helper/helpers/exo-compose-mail-0.3: For some reasons, not all
+	  env implementations can handle additional parameters properly.
+	  Bug #1923.
+
 2006-06-13	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-cell-renderer-ellipsized-text.{c,h}, exo/exo.symbols,
