--- a/exo-helper/helpers/exo-compose-mail-0.3
+++ b/exo-helper/helpers/exo-compose-mail-0.3
@@ -1,4 +1,4 @@
-#!/usr/bin/env perl -w
+#!/usr/bin/env perl
 #
 # exo-compose-mail-0.3 - Perl script to parse mailto:-URIs and invoke the
 #                        various included MailReaders with the appropriate
