Some very minor changes to tidy up the contents of the settings menu in swedish, not worthy a changelog entry imho, bitch at me if I'm wrong.
(Old svn revision: 22212)

--- a/po/sv.po
+++ b/po/sv.po
@@ -786,7 +786,7 @@ msgstr "Förvalda program (Webbläsare, mejlklient och terminalemulator)"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:3
 msgid "Xfce 4 Preferred Applications"
-msgstr "Förvalda program i Xfce"
+msgstr "Xfce 4 Förvalda program"
 
 #: ../exo-helper/helpers/Terminal.desktop.in.in.h:1
 msgid "Xfce Terminal"
