2006-07-09	Benedikt Meurer <benny@xfce.org>
	* === Released 0.3.1.8beta2 ===
	* NEWS, configure.in.in: Bump version.
	* THANKS: Add missing translator credits.
	* po/*.po: Update Project-Id-Version.
	* exo.spec.in: Add missing files.




(Old svn revision: 22320)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-07-09	Benedikt Meurer <benny@xfce.org>
+
+	* === Released 0.3.1.8beta2 ===
+	* NEWS, configure.in.in: Bump version.
+	* THANKS: Add missing translator credits.
+	* po/*.po: Update Project-Id-Version.
+	* exo.spec.in: Add missing files.
+
 2006-06-19	Benedikt Meurer <benny@xfce.org>
 
 	* exo-helper/helpers/exo-compose-mail-0.3: For some reasons, not all
