--- a/THANKS
+++ b/THANKS
@@ -22,6 +22,9 @@ These people have translated libexo to foreign languages.
  Michal Várady <miko.vaji@gmail.com>
   * cs translations
 
+ Benedikt Meurer <benny@xfce.org>
+  * de translations
+
  Stavros Giannouris <stavrosg2002@freemail.gr>
   * el translations
 
@@ -61,11 +64,17 @@ These people have translated libexo to foreign languages.
  Joao Pedrosa <joaopedrosa@gmail.com>
   * pt_BR translations
 
+ Mişu Moldovan <dumol@gnome.ro>
+  * ro translations
+
  Andrey Fedoseev <andrey.fedoseev@gmail.com>
   * ru translations
 
  Maxim Zenin <webmechanics@gmail.com>
   * ru translations
+
+ Alexander Toresson <alexander.toresson@gmail.com>
+  * sv translations
 
 
 
