--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-09  Benedikt Meurer <benny@xfce.org>
+
+	* *.po: Update Project-Id-Version.
+
 2006-07-07  Stavros Giannouris <stavrosg2002@freemail.gr>
 
 	* el.po: Minor corrections.
