--- a/po/he.po
+++ b/po/he.po
@@ -1,11 +1,11 @@
 # translation of libexo-0.3_he.po to Hebrew
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-#
+# Copyright (C) 2006 os-cillation e.K.
+# This file is distributed under the same license as the exo package.
 # Dotan Kamber <kamberd@yahoo.com>, 2006.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: exo 0.3.1.7svn\n"
+"Project-Id-Version: exo 0.3.1.8beta2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-06-16 21:58+0900\n"
 "PO-Revision-Date: 2006-04-19 02:37+0300\n"
