--- a/po/cs.po
+++ b/po/cs.po
@@ -5,7 +5,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: exo 0.3.1.7svn\n"
+"Project-Id-Version: exo 0.3.1.8beta2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-06-16 21:58+0900\n"
 "PO-Revision-Date: 2006-05-08 16:49+0100\n"
