--- a/po/hu.po
+++ b/po/hu.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: exo 0.3.1.7svn\n"
+"Project-Id-Version: exo 0.3.1.8beta2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-06-16 21:58+0900\n"
 "PO-Revision-Date: 2006-06-08 08:43+0100\n"
