--- a/po/lt.po
+++ b/po/lt.po
@@ -1,11 +1,11 @@
-# Lithuanian translations for PACKAGE package.
-# Copyright (C) 2006 THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Lithuanian translations for exo package.
+# Copyright (C) 2004-2006 os-cillation e.K.
+# This file is distributed under the same license as the exo package.
 # mantas <mantaz@users.sourceforge.net>, 2006.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: exo 0.3.1.7svn\n"
+"Project-Id-Version: exo 0.3.1.8beta2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-06-16 21:58+0900\n"
 "PO-Revision-Date: 2006-05-26 12:00+0300\n"
