2006-07-09	Benedikt Meurer <benny@xfce.org>
	* configure.in.in: Post-release version bump.




(Old svn revision: 22324)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-07-09	Benedikt Meurer <benny@xfce.org>
 
+	* configure.in.in: Post-release version bump.
+
+2006-07-09	Benedikt Meurer <benny@xfce.org>
+
 	* === Released 0.3.1.8beta2 ===
 	* NEWS, configure.in.in: Bump version.
 	* THANKS: Add missing translator credits.
