2006-07-28	Benedikt Meurer <benny@xfce.org>
	* exo/exo-icon-view.c(ExoIconViewItem): Apply patch from Matt McClinch 
	  <mattmcclinch@gmail.com> to fix invalid size for row and col.




(Old svn revision: 22542)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-07-28	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-icon-view.c(ExoIconViewItem): Apply patch from Matt McClinch 
+	  <mattmcclinch@gmail.com> to fix invalid size for row and col.
+
 2006-07-26	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-xsession-client.c(exo_xsession_client_set_group): Use the
