--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2006-08-06  Benedikt Meurer <benny@xfce.org>
+
+	* POTFILES.in: Add new files here.
+	* libexo-0.3.pot, *.po: Updated.
+	* de.po: Update german translations.
+
 2006-07-16  Adriano Winter Bess  <adriano@xfce.org>
 
 	* pt_BR.po: Updated brazilian portuguese translations
