--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-08  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
+
+	* fi.po: Updated Finnish translation.
+
 2006-08-06  Benedikt Meurer <benny@xfce.org>
 
 	* POTFILES.in: Add new files here.
