librexo basque translation update
(Old svn revision: 22690)

--- a/po/eu.po
+++ b/po/eu.po
@@ -440,9 +440,9 @@ msgid "Shell Scripts"
 msgstr "Shell Script-ak"
 
 #: ../exo-desktop-item-edit/exo-die-desktop-model.c:326
-#, fuzzy, c-format
+#, c-format
 msgid "Create Launcher <b>%s</b>"
-msgstr "Abiarazlea sortu"
+msgstr "<b>%s</b> Abiarazlea Sortu"
 
 #. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:318
@@ -581,9 +581,9 @@ msgstr "Ez da fitxategi/karpeta ezarri"
 
 #. tell the user that we don't support the type
 #: ../exo-desktop-item-edit/main.c:225
-#, fuzzy, c-format
+#, c-format
 msgid "Unsupported desktop file type \"%s\""
-msgstr "'%s' idazmahai fitxategi mota ez da onartzen"
+msgstr "'\"%s\" idazmahai fitxategi mota ez da onartzen"
 
 #. add the "Create"/"Save" button (as default)
 #: ../exo-desktop-item-edit/main.c:245
