updated Polish translations by piotr maliński <riklaunim@gmail.com>
(Old svn revision: 22780)

--- a/po/pl.po
+++ b/po/pl.po
@@ -34,11 +34,11 @@ msgstr ""
 
 #: ../exo/exo-icon-bar.c:282 ../exo/exo-icon-view.c:926
 msgid "Text column"
-msgstr ""
+msgstr "Kolumna tekstu"
 
 #: ../exo/exo-icon-bar.c:283 ../exo/exo-icon-view.c:927
 msgid "Model column used to retrieve the text from"
-msgstr ""
+msgstr "Kolumna modelowa używana do pobierania tekstu"
 
 #: ../exo/exo-icon-bar.c:295
 msgid "Icon Bar Model"
@@ -438,9 +438,9 @@ msgid "Shell Scripts"
 msgstr "Skrypty powłoki"
 
 #: ../exo-desktop-item-edit/exo-die-desktop-model.c:326
-#, fuzzy, c-format
+#, c-format
 msgid "Create Launcher <b>%s</b>"
-msgstr "Utwórz aktywator"
+msgstr "Utwórz aktywator <b>%s</b>"
 
 #. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:318
@@ -578,7 +578,7 @@ msgstr "Nie podano pliku lub folderu"
 
 #. tell the user that we don't support the type
 #: ../exo-desktop-item-edit/main.c:225
-#, fuzzy, c-format
+#, c-format
 msgid "Unsupported desktop file type \"%s\""
 msgstr "Nieobsługiwany typ pliku pulpitu \"%s\""
 
@@ -879,7 +879,7 @@ msgstr "Mozilla Thunderbird"
 
 #: ../exo-helper/helpers/urxvt.desktop.in.in.h:1
 msgid "RXVT Unicode"
-msgstr ""
+msgstr "Unikod RXVT"
 
 #: ../exo-helper/helpers/xterm.desktop.in.in.h:1
 msgid "X Terminal"
