Basque translation update for libexo
(Old svn revision: 22784)

--- a/po/eu.po
+++ b/po/eu.po
@@ -1,4 +1,4 @@
-# translation of eu.po to Euskara
+# translation of eu.po to librezale
 # Basque translations for xfce package.
 # Copyright (C) 2004-2006 os-cillation e.K.
 # This file is distributed under the same license as the exo package.
@@ -6,12 +6,12 @@
 # Piarres Beobide <pi@beobide.net>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: exo 0.3.1.8beta2\n"
+"Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-14 21:42+0200\n"
-"PO-Revision-Date: 2006-06-08 17:38+0200\n"
+"PO-Revision-Date: 2006-08-15 22:44+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
-"Language-Team: Euskara <librezale@librezale.org>\n"
+"Language-Team: librezale <librezale@librezale.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -150,8 +150,7 @@ msgid "The model for the icon view"
 msgstr "Ikono ikuspegiaren modeloa"
 
 #: ../exo/exo-icon-view.c:783
-msgid ""
-"How the text and icon of each item are positioned relative to each other"
+msgid "How the text and icon of each item are positioned relative to each other"
 msgstr "Elementu bakoitzaren testu eta ikonoaren kokapena bestearekiko"
 
 #: ../exo/exo-icon-view.c:815
@@ -882,7 +881,7 @@ msgstr "Mozilla Thunderbird"
 
 #: ../exo-helper/helpers/urxvt.desktop.in.in.h:1
 msgid "RXVT Unicode"
-msgstr ""
+msgstr "RXVT Unicode"
 
 #: ../exo-helper/helpers/xterm.desktop.in.in.h:1
 msgid "X Terminal"
@@ -898,14 +897,11 @@ msgstr "       exo-open --launch MOTA [PARAMETROAK...]"
 
 #: ../exo-open/main.c:46
 msgid "  -h, --help                          Print this help message and exit"
-msgstr ""
-"  -h, --help                          Laguntza testua hau bistarazi eta irten"
+msgstr "  -h, --help                          Laguntza testua hau bistarazi eta irten"
 
 #: ../exo-open/main.c:47
-msgid ""
-"  -v, --version                       Print version information and exit"
-msgstr ""
-"  -v, --version                       Bertsio xehetasunak bistarazi eta irten"
+msgid "  -v, --version                       Print version information and exit"
+msgstr "  -v, --version                       Bertsio xehetasunak bistarazi eta irten"
 
 #: ../exo-open/main.c:49
 msgid ""
@@ -961,3 +957,4 @@ msgstr "Huts \"%s\" ataleko hobetsiriko aplikazioa irekitzerakoan."
 #, c-format
 msgid "Failed to open URL \"%s\"."
 msgstr "Huts \"%s\" URL-a irekitzerakoan."
+
