--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-08-19  Jean-François Wauthy <pollux@xfce.org>
+
+	* cs.po: Updated Czech translations by Michal Varady
+	<miko.vaji@gmail.com>
+
 2006-08-17  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
 
 	* fi.po: Updated Finnish translation.
